boulder/tests/compile_fail/type/structures/field_name.bo
# `a` is bound more than once
# (5:
# (6:
struct A {
    a: u32,
    a: u8,
}